[build-system]
requires = ["setuptools >= 65.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nbxmpp"
description = "XMPP Library"
keywords = ["chat", "messaging", "im", "xmpp"]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Philipp Hörist", email = "philipp@hoerist.com"},
    {name = "Yann Leboulanger", email = "yann@leboulanger.org"},
]
classifiers = [
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "precis-i18n>=1.0.0",
    "packaging",
    "idna",
    "PyGObject>=3.42.0",
]

dynamic = ["version"]

[project.optional-dependencies]
gssapi = ["gssapi"]
dev = [
  "isort>=5.13.2",
  "PyGObject-stubs @ git+https://github.com/pygobject/pygobject-stubs.git",
]

[project.urls]
repository = "https://dev.gajim.org/gajim/python-nbxmpp"

[tool.setuptools.packages.find]
include = ["nbxmpp*"]

[tool.setuptools.package-data]
"nbxmpp" = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "nbxmpp.__version__"}

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "strict"

reportUnnecessaryTypeIgnoreComment = "error"
reportPropertyTypeMismatch = "error"
reportMissingModuleSource = "none"

[tool.isort]
force_alphabetical_sort_within_sections = true
force_single_line = true
group_by_package = true
known_typing = ["typing"]
sections = [
  "FUTURE",
  "TYPING",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER"
]
skip_gitignore = true
