[metadata]
name = nbxmpp
version = 0.9.94
description = Non blocking Jabber/XMPP module
author = Yann Leboulanger, Philipp Hoerist
author_email = gajim-devel@gajim.org
url = https://dev.gajim.org/gajim/python-nbxmpp
license_file = COPYING
license = GPL v3
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
packages = find:
install_requires =
    precis-i18n>=1.0.0

[options.packages.find]
exclude =
    test*
