[metadata]
name = nbxmpp
version = 1.0.2
description = XMPP Library
author = Yann Leboulanger, Philipp Hoerist
author_email = gajim-devel@gajim.org
long_description = file: README.md  
long_description_content_type = text/markdown
keywords = xmpp chat
url = https://dev.gajim.org/gajim/python-nbxmpp
license_file = COPYING
license = GPL v3
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
packages = find:
install_requires =
    precis-i18n>=1.0.0
    idna

[options.packages.find]
exclude =
    test*
